<resources>
    <string name="app_name">B-Barq</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="bill_id_text_input_title">Bill ID :</string>
    <string name="update_interval_slider_title">Update interval</string>
    <string name="notify_changes_switch_title">Notify Changes</string>
    <string name="notify_changes_switch_subtitle">Send a Notification when theres a change in outage schedules</string>
    <string name="save_button_text">Save</string>
    <string name="start_service_fab_text">Start Service</string>
    <string name="reminder_switch_title">Reminder</string>
    <string name="reminder_switch_subtitle">Sends a reminder 30 Minutes before each schedule</string>
    <string name="schedule_layout_start_title">Starts at :</string>
    <string name="schedule_layout_end_title">Ends at :</string>
    <string name="address">Address :</string>
    <string name="schedule_layout_reason_title">Reason :</string>
    <string name="schedule_layout_billid_title">Bill ID :</string>
    <string name="current_schedule_title">Current Schedule :</string>
    <string name="permission_request_cta_text">Fix</string>
    <string name="allow_background_battery_usage">Unrestricted Battery Usage</string>
    <string name="allow_setting_exact_alarms">Setting Exact Alarms</string>
    <string name="battery_permissoin_subtitle">Allow this to let the app run in the background</string>
    <string name="alarm_permissoin_subtitle">Allow this to let the app schedule reminders</string>
    <string name="refresh">Refresh</string>
    <string name="action_about">About</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="start_service_fab">Start Service</string>
    <string name="stop_service_fab">Stop Service</string>
    <string name="field_error_invalid_id">Bill ID is invalid</string>
    <string name="field_error_invalid_id_sub">Please provide a valid bill id</string>
    <string name="field_error_invalid_id_count">Must be 13 chars long</string>
    <string name="action_logout">Logout</string>
    <string name="notification_permission_sub">Please allow the app to send notifications.</string>
</resources>