<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:cardBackgroundColor="?attr/colorSurfaceVariant"
    app:strokeWidth="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tuesday , 1404/6/14"
            android:id="@+id/schedule_date"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:gravity="center" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:src="@drawable/dotted"
            android:layout_marginVertical="7dp"
            app:tint="?attr/colorOnSurface" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.Material3.LabelMedium"
                    android:gravity="center"
                    android:text="@string/schedule_layout_start_title"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="15:00"
                    android:id="@+id/schedule_start_time"
                    style="@style/TextAppearance.Material3.DisplaySmall"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.Material3.LabelMedium"
                    android:gravity="center"
                    android:text="@string/schedule_layout_end_title"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.Material3.DisplaySmall"
                    android:id="@+id/schedule_end_time"
                    android:gravity="center"
                    tools:text="17:00"/>
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:src="@drawable/dotted"
            android:layout_marginVertical="7dp"
            app:tint="?attr/colorOnSurface" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_layout_reason_title"
                style="@style/TextAppearance.Material3.BodyMedium"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="end"
                android:textAlignment="viewEnd"
                android:ellipsize="marquee"
                android:layout_marginStart="15dp"
                android:layout_height="wrap_content"
                android:text="Bullshit"
                android:id="@+id/schedule_reason"
                style="@style/TextAppearance.Material3.BodyMedium"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_layout_billid_title"
                style="@style/TextAppearance.Material3.BodyMedium"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="end"
                android:textAlignment="viewEnd"
                android:ellipsize="marquee"
                android:layout_marginStart="15dp"
                android:layout_height="wrap_content"
                android:text="6985656599"
                android:id="@+id/schedule_bill_id"
                style="@style/TextAppearance.Material3.BodyMedium"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                style="@style/TextAppearance.Material3.BodyMedium"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="end"
                android:ellipsize="marquee"
                android:textAlignment="viewEnd"
                android:layout_marginStart="21dp"
                android:layout_height="wrap_content"
                android:text="Somewhere in hell lorem ipsum dolor something jkasfjhsafjkahsf"
                android:maxLines="1"
                android:id="@+id/schedule_address"
                style="@style/TextAppearance.Material3.BodyMedium"/>
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>