<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layoutDirection="ltr"
    android:paddingHorizontal="12dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_bill"
                app:tint="?attr/colorPrimaryDark" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/billId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/bill_id_text_input_title"
                android:paddingHorizontal="13dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/billIdInput"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_notification"
                app:tint="?attr/colorPrimaryDark"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="13dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.Material3.TitleLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/reminder_switch_title" />

                <TextView
                    style="@style/TextAppearance.Material3.BodyMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/reminder_switch_subtitle" />
            </LinearLayout>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/reminderSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/battery_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:strokeWidth="0dp"
            android:visibility="gone"
            android:layout_marginTop="14dp"
            app:cardBackgroundColor="?attr/colorErrorContainer">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="8dp"
                    android:src="@drawable/baseline_error_24"
                    app:tint="?attr/colorOnErrorContainer"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginVertical="6dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textColor="?attr/colorOnErrorContainer"
                        android:text="@string/allow_background_battery_usage" />

                    <TextView
                        style="@style/TextAppearance.Material3.BodySmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:gravity="center_vertical"
                        android:text="@string/battery_permissoin_subtitle" />
                </LinearLayout>

                <Button
                    style="?attr/materialIconButtonFilledTonalStyle"
                    android:id="@+id/battery_optimization_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX=".8"
                    android:scaleY=".8"
                    android:checkable="true"
                    android:backgroundTint="?attr/colorSurface"
                    app:icon="@drawable/outline_arrow_forward_ios_24"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/alarms_and_reminders_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:strokeWidth="0dp"
            android:visibility="gone"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="?attr/colorErrorContainer">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="8dp"
                    android:src="@drawable/baseline_error_24"
                    app:tint="?attr/colorOnErrorContainer"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginVertical="6dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextAppearance.Material3.BodyLarge"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:textColor="?attr/colorOnErrorContainer"
                            android:text="@string/allow_setting_exact_alarms" />

                        <TextView
                            style="@style/TextAppearance.Material3.BodySmall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:gravity="center_vertical"
                            android:text="@string/alarm_permissoin_subtitle" />
                    </LinearLayout>

                <Button
                    style="?attr/materialIconButtonFilledTonalStyle"
                    android:id="@+id/alarms_and_reminders_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX=".8"
                    android:scaleY=".8"
                    android:checkable="true"
                    android:backgroundTint="?attr/colorSurface"
                    app:icon="@drawable/outline_arrow_forward_ios_24"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/current_schedule_title" />
        <ImageView
            android:id="@+id/refresh"
            android:layout_width="39dp"
            android:padding="4dp"
            android:layout_height="39dp"
            android:checkable="true"
            android:src="@drawable/ic_renew"
            app:tint="?attr/colorPrimary" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            tools:itemCount="1"
            tools:visibility="gone"
            tools:listitem="@layout/schedule_info_layout"/>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:indeterminate="true" />
        <include layout="@layout/error_layout" android:id="@+id/networkError" android:visibility="gone"/>
        <TextView
            android:id="@+id/empty_list"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:lineSpacingMultiplier="1.4"
            android:layout_marginHorizontal="8dp"
            android:visibility="gone"
            android:textStyle="bold"
            android:textColor="?attr/colorPrimary"
            android:textSize="26sp"
            android:text="no shit for today asfjh agf jhag jhg  45f"/>

    </RelativeLayout>
</LinearLayout>